Add checkstyle plugin