@@ -2,7 +2,7 @@ package com.harcyah.kata.codingbat.functional2;
 
 import org.junit.Test;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -11,14 +11,22 @@ public class NoLongTest {
     @Test
     public void testNoLong() {
         NoLong noLong = new NoLong();
-        assertThat(noLong.noLong(Arrays.asList("this", "not", "too", "long"))).containsExactly("not", "too");
-        assertThat(noLong.noLong(Arrays.asList("a", "bbb", "cccc"))).containsExactly("a", "bbb");
-        assertThat(noLong.noLong(Arrays.asList("cccc", "cccc", "cccc"))).containsExactly();
-        assertThat(noLong.noLong(Arrays.asList())).containsExactly();
-        assertThat(noLong.noLong(Arrays.asList(""))).containsExactly("");
-        assertThat(noLong.noLong(Arrays.asList("empty", "", "empty"))).containsExactly("");
-        assertThat(noLong.noLong(Arrays.asList("a"))).containsExactly("a");
-        assertThat(noLong.noLong(Arrays.asList("aaaa", "bbb", "***", "333"))).containsExactly("bbb", "***", "333");
+        assertThat(noLong.noLong(List.of("this", "not", "too", "long")))
+            .containsExactly("not", "too");
+        assertThat(noLong.noLong(List.of("a", "bbb", "cccc")))
+            .containsExactly("a", "bbb");
+        assertThat(noLong.noLong(List.of("cccc", "cccc", "cccc")))
+            .containsExactly();
+        assertThat(noLong.noLong(List.of()))
+            .containsExactly();
+        assertThat(noLong.noLong(List.of("")))
+            .containsExactly("");
+        assertThat(noLong.noLong(List.of("empty", "", "empty")))
+            .containsExactly("");
+        assertThat(noLong.noLong(List.of("a")))
+            .containsExactly("a");
+        assertThat(noLong.noLong(List.of("aaaa", "bbb", "***", "333")))
+            .containsExactly("bbb", "***", "333");
     }
 
 }
