@@ -2,7 +2,7 @@ package com.harcyah.kata.codingbat.functional2;
 
 import org.junit.Test;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -11,12 +11,18 @@ public class NoZTest {
     @Test
     public void testNoZ() {
         NoZ noZ = new NoZ();
-        assertThat(noZ.noZ(Arrays.asList("aaa", "bbb", "aza"))).containsExactly("aaa", "bbb");
-        assertThat(noZ.noZ(Arrays.asList("hziz", "hzello", "hi"))).containsExactly("hi");
-        assertThat(noZ.noZ(Arrays.asList("hello", "howz", "are", "youz"))).containsExactly("hello", "are");
-        assertThat(noZ.noZ(Arrays.asList())).containsExactly();
-        assertThat(noZ.noZ(Arrays.asList(""))).containsExactly("");
-        assertThat(noZ.noZ(Arrays.asList("x", "y", "z"))).containsExactly("x", "y");
+        assertThat(noZ.noZ(List.of("aaa", "bbb", "aza")))
+            .containsExactly("aaa", "bbb");
+        assertThat(noZ.noZ(List.of("hziz", "hzello", "hi")))
+            .containsExactly("hi");
+        assertThat(noZ.noZ(List.of("hello", "howz", "are", "youz")))
+            .containsExactly("hello", "are");
+        assertThat(noZ.noZ(List.of()))
+            .containsExactly();
+        assertThat(noZ.noZ(List.of("")))
+            .containsExactly("");
+        assertThat(noZ.noZ(List.of("x", "y", "z")))
+            .containsExactly("x", "y");
     }
 
 }
