@@ -1,23 +1,27 @@
 package com.harcyah.kata.codingbat.map1.topping1;
 
-import org.assertj.core.api.Assertions;
+import com.harcyah.kata.codingbat.MapBuilder;
 import org.junit.Test;
 
-import com.google.common.collect.ImmutableMap;
-import com.harcyah.kata.codingbat.MapBuilder;
+import java.util.Map;
+
+import static org.assertj.core.api.Assertions.assertThat;
 
 public class Topping1Test {
 
-	@Test
-	public void testTopping1() {
-		Topping1 topping1 = new Topping1();
-		Assertions.assertThat(topping1.topping1(MapBuilder.build("ice cream", "peanuts"))).isEqualTo(ImmutableMap.of("bread", "butter", "ice cream", "cherry"));
-		Assertions.assertThat(topping1.topping1(MapBuilder.build())).isEqualTo(ImmutableMap.of("bread", "butter"));
-		Assertions.assertThat(topping1.topping1(MapBuilder.build("pancake", "syrup"))).isEqualTo(ImmutableMap.of("bread", "butter", "pancake", "syrup"));
-		Assertions.assertThat(topping1.topping1(MapBuilder.build("bread", "dirt", "ice cream", "strawberries")))
-			.isEqualTo(ImmutableMap.of("bread", "butter", "ice cream", "cherry"));
-		Assertions.assertThat(topping1.topping1(MapBuilder.build("salad", "oil", "bread", "jam", "ice cream", "strawberries")))
-			.isEqualTo(ImmutableMap.of("salad", "oil", "bread", "butter", "ice cream", "cherry"));
-	}
+    @Test
+    public void testTopping1() {
+        Topping1 topping1 = new Topping1();
+        assertThat(topping1.topping1(MapBuilder.build("ice cream", "peanuts")))
+            .isEqualTo(Map.of("bread", "butter", "ice cream", "cherry"));
+        assertThat(topping1.topping1(MapBuilder.build()))
+            .isEqualTo(Map.of("bread", "butter"));
+        assertThat(topping1.topping1(MapBuilder.build("pancake", "syrup")))
+            .isEqualTo(Map.of("bread", "butter", "pancake", "syrup"));
+        assertThat(topping1.topping1(MapBuilder.build("bread", "dirt", "ice cream", "strawberries")))
+            .isEqualTo(Map.of("bread", "butter", "ice cream", "cherry"));
+        assertThat(topping1.topping1(MapBuilder.build("salad", "oil", "bread", "jam", "ice cream", "strawberries")))
+            .isEqualTo(Map.of("salad", "oil", "bread", "butter", "ice cream", "cherry"));
+    }
 
 }
