@@ -2,10 +2,11 @@ package com.harcyah.kata.exercism.allergies;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 
 public class AllergiesTest {
 
@@ -13,73 +14,73 @@ public class AllergiesTest {
     public void noAllergiesMeansNotAllergicToAnything() {
         Allergies allergies = new Allergies(0);
 
-        assertEquals(false, allergies.isAllergicTo(Allergen.EGGS));
-        assertEquals(false, allergies.isAllergicTo(Allergen.PEANUTS));
-        assertEquals(false, allergies.isAllergicTo(Allergen.STRAWBERRIES));
-        assertEquals(false, allergies.isAllergicTo(Allergen.CATS));
+        assertFalse(allergies.isAllergicTo(Allergen.EGGS));
+        assertFalse(allergies.isAllergicTo(Allergen.PEANUTS));
+        assertFalse(allergies.isAllergicTo(Allergen.STRAWBERRIES));
+        assertFalse(allergies.isAllergicTo(Allergen.CATS));
     }
 
     @Test
     public void allergicToEggs() {
         Allergies allergies = new Allergies(1);
 
-        assertEquals(true, allergies.isAllergicTo(Allergen.EGGS));
+        assertTrue(allergies.isAllergicTo(Allergen.EGGS));
     }
 
     @Test
     public void allergicToPeanuts() {
         Allergies allergies = new Allergies(2);
 
-        assertEquals(true, allergies.isAllergicTo(Allergen.PEANUTS));
+        assertTrue(allergies.isAllergicTo(Allergen.PEANUTS));
     }
 
     @Test
     public void allergicToShellfish() {
         Allergies allergies = new Allergies(4);
 
-        assertEquals(true, allergies.isAllergicTo(Allergen.SHELLFISH));
+        assertTrue(allergies.isAllergicTo(Allergen.SHELLFISH));
     }
 
     @Test
     public void allergicToStrawberries() {
         Allergies allergies = new Allergies(8);
 
-        assertEquals(true, allergies.isAllergicTo(Allergen.STRAWBERRIES));
+        assertTrue(allergies.isAllergicTo(Allergen.STRAWBERRIES));
     }
 
     @Test
     public void allergicToTomatoes() {
         Allergies allergies = new Allergies(16);
 
-        assertEquals(true, allergies.isAllergicTo(Allergen.TOMATOES));
+        assertTrue(allergies.isAllergicTo(Allergen.TOMATOES));
     }
 
     @Test
     public void allergicToChocolate() {
         Allergies allergies = new Allergies(32);
 
-        assertEquals(true, allergies.isAllergicTo(Allergen.CHOCOLATE));
+        assertTrue(allergies.isAllergicTo(Allergen.CHOCOLATE));
     }
 
     @Test
     public void allergicToPollen() {
         Allergies allergies = new Allergies(64);
 
-        assertEquals(true, allergies.isAllergicTo(Allergen.POLLEN));
+        assertTrue(allergies.isAllergicTo(Allergen.POLLEN));
     }
 
     @Test
     public void allergicToCats() {
         Allergies allergies = new Allergies(128);
 
-        assertEquals(true, allergies.isAllergicTo(Allergen.CATS));
+        assertTrue(allergies.isAllergicTo(Allergen.CATS));
     }
 
     @Test
     public void isAllergicToEggsInAdditionToOtherStuff() {
         Allergies allergies = new Allergies(5);
 
-        assertEquals(true, allergies.isAllergicTo(Allergen.EGGS));
+        assertTrue(allergies.isAllergicTo(Allergen.EGGS));
     }
 
     @Test
@@ -92,7 +93,7 @@ public class AllergiesTest {
     @Test
     public void isAllergicToJustEggs() {
         Allergies allergies = new Allergies(1);
-        List<Allergen> expectedAllergens = Arrays.asList(new Allergen[]{Allergen.EGGS});
+        List<Allergen> expectedAllergens = List.of(new Allergen[]{Allergen.EGGS});
 
         assertEquals(expectedAllergens, allergies.getList());
     }
@@ -100,7 +101,7 @@ public class AllergiesTest {
     @Test
     public void isAllergicToJustPeanuts() {
         Allergies allergies = new Allergies(2);
-        List<Allergen> expectedAllergens = Arrays.asList(new Allergen[]{Allergen.PEANUTS});
+        List<Allergen> expectedAllergens = List.of(new Allergen[]{Allergen.PEANUTS});
 
         assertEquals(expectedAllergens, allergies.getList());
     }
@@ -108,7 +109,7 @@ public class AllergiesTest {
     @Test
     public void isAllergicToJustStrawberries() {
         Allergies allergies = new Allergies(8);
-        List<Allergen> expectedAllergens = Arrays.asList(new Allergen[]{Allergen.STRAWBERRIES});
+        List<Allergen> expectedAllergens = List.of(new Allergen[]{Allergen.STRAWBERRIES});
 
         assertEquals(expectedAllergens, allergies.getList());
     }
@@ -116,9 +117,9 @@ public class AllergiesTest {
     @Test
     public void isAllergicToEggsAndPeanuts() {
         Allergies allergies = new Allergies(3);
-        List<Allergen> expectedAllergens = Arrays.asList(new Allergen[]{
-                Allergen.EGGS,
-                Allergen.PEANUTS
+        List<Allergen> expectedAllergens = List.of(new Allergen[]{
+            Allergen.EGGS,
+            Allergen.PEANUTS
         });
 
         assertEquals(expectedAllergens, allergies.getList());
@@ -127,9 +128,9 @@ public class AllergiesTest {
     @Test
     public void isAllergicToEggsAndShellfish() {
         Allergies allergies = new Allergies(5);
-        List<Allergen> expectedAllergens = Arrays.asList(new Allergen[]{
-                Allergen.EGGS,
-                Allergen.SHELLFISH
+        List<Allergen> expectedAllergens = List.of(new Allergen[]{
+            Allergen.EGGS,
+            Allergen.SHELLFISH
         });
 
         assertEquals(expectedAllergens, allergies.getList());
@@ -138,12 +139,12 @@ public class AllergiesTest {
     @Test
     public void isAllergicToLotsOfStuff() {
         Allergies allergies = new Allergies(248);
-        List<Allergen> expectedAllergens = Arrays.asList(new Allergen[]{
-                Allergen.STRAWBERRIES,
-                Allergen.TOMATOES,
-                Allergen.CHOCOLATE,
-                Allergen.POLLEN,
-                Allergen.CATS
+        List<Allergen> expectedAllergens = List.of(new Allergen[]{
+            Allergen.STRAWBERRIES,
+            Allergen.TOMATOES,
+            Allergen.CHOCOLATE,
+            Allergen.POLLEN,
+            Allergen.CATS
         });
 
         assertEquals(expectedAllergens, allergies.getList());
@@ -152,15 +153,15 @@ public class AllergiesTest {
     @Test
     public void isAllergicToEverything() {
         Allergies allergies = new Allergies(255);
-        List<Allergen> expectedAllergens = Arrays.asList(new Allergen[]{
-                Allergen.EGGS,
-                Allergen.PEANUTS,
-                Allergen.SHELLFISH,
-                Allergen.STRAWBERRIES,
-                Allergen.TOMATOES,
-                Allergen.CHOCOLATE,
-                Allergen.POLLEN,
-                Allergen.CATS
+        List<Allergen> expectedAllergens = List.of(new Allergen[]{
+            Allergen.EGGS,
+            Allergen.PEANUTS,
+            Allergen.SHELLFISH,
+            Allergen.STRAWBERRIES,
+            Allergen.TOMATOES,
+            Allergen.CHOCOLATE,
+            Allergen.POLLEN,
+            Allergen.CATS
         });
 
         assertEquals(expectedAllergens, allergies.getList());
@@ -169,16 +170,17 @@ public class AllergiesTest {
     @Test
     public void ignoreNonAllergenScoreParts() {
         Allergies allergies = new Allergies(509);
-        List<Allergen> expectedAllergens = Arrays.asList(new Allergen[]{
-                Allergen.EGGS,
-                Allergen.SHELLFISH,
-                Allergen.STRAWBERRIES,
-                Allergen.TOMATOES,
-                Allergen.CHOCOLATE,
-                Allergen.POLLEN,
-                Allergen.CATS
+        List<Allergen> expectedAllergens = List.of(new Allergen[]{
+            Allergen.EGGS,
+            Allergen.SHELLFISH,
+            Allergen.STRAWBERRIES,
+            Allergen.TOMATOES,
+            Allergen.CHOCOLATE,
+            Allergen.POLLEN,
+            Allergen.CATS
         });
 
         assertEquals(expectedAllergens, allergies.getList());
     }
+
 }
