@@ -1,24 +1,26 @@
 package com.harcyah.kata.exercism.binary;
 
+import lombok.AllArgsConstructor;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 import org.junit.runners.Parameterized.Parameters;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import static org.junit.Assert.assertEquals;
 
+@AllArgsConstructor
 @RunWith(Parameterized.class)
 public class BinaryTest {
 
-    private String input;
-    private int expectedOutput;
+    private final String input;
+    private final int expectedOutput;
 
     @Parameters
     public static Collection<Object[]> data() {
-        return Arrays.asList(new Object[][]{
+        return List.of(new Object[][]{
                 {"1", 1},
                 {"10", 2},
                 {"11", 3},
@@ -35,15 +37,11 @@ public class BinaryTest {
         });
     }
 
-    public BinaryTest(String input, int expectedOutput) {
-        this.input = input;
-        this.expectedOutput = expectedOutput;
-    }
-
     @Test
     public void test() {
         Binary binary = new Binary(input);
 
         assertEquals(expectedOutput, binary.getDecimal());
     }
+
 }
