@@ -3,9 +3,9 @@ package com.harcyah.kata.exercism.saddle_points;
 import org.junit.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 import static org.junit.Assert.assertEquals;
@@ -17,10 +17,10 @@ public class MatrixTest {
 
     @Test
     public void testCanIdentifySingleSaddlePoint() {
-        Matrix matrix = new Matrix(Arrays.asList(
-            Arrays.asList(9, 8, 7),
-            Arrays.asList(5, 3, 2),
-            Arrays.asList(6, 6, 7)
+        Matrix matrix = new Matrix(List.of(
+            List.of(9, 8, 7),
+            List.of(5, 3, 2),
+            List.of(6, 6, 7)
         ));
 
         Set<MatrixCoordinate> expectedSaddlePoints = Collections.singleton(new MatrixCoordinate(1, 0));
@@ -39,10 +39,10 @@ public class MatrixTest {
 
     @Test
     public void testCanIdentifyLackOfSaddlePointsWhenThereAreNone() {
-        Matrix matrix = new Matrix(Arrays.asList(
-            Arrays.asList(1, 2, 3),
-            Arrays.asList(3, 1, 2),
-            Arrays.asList(2, 3, 1)
+        Matrix matrix = new Matrix(List.of(
+            List.of(1, 2, 3),
+            List.of(3, 1, 2),
+            List.of(2, 3, 1)
         ));
 
         Set<MatrixCoordinate> expectedSaddlePoints = Collections.emptySet();
@@ -52,13 +52,13 @@ public class MatrixTest {
 
     @Test
     public void testCanIdentifyMultipleSaddlePoints() {
-        Matrix matrix = new Matrix(Arrays.asList(
-            Arrays.asList(4, 5, 4),
-            Arrays.asList(3, 5, 5),
-            Arrays.asList(1, 5, 4)
+        Matrix matrix = new Matrix(List.of(
+            List.of(4, 5, 4),
+            List.of(3, 5, 5),
+            List.of(1, 5, 4)
         ));
 
-        Set<MatrixCoordinate> expectedSaddlePoints = new HashSet<>(Arrays.asList(
+        Set<MatrixCoordinate> expectedSaddlePoints = new HashSet<>(List.of(
             new MatrixCoordinate(0, 1),
             new MatrixCoordinate(1, 1),
             new MatrixCoordinate(2, 1)
@@ -69,10 +69,10 @@ public class MatrixTest {
 
     @Test
     public void testCanIdentifySaddlePointInBottomRightCorner() {
-        Matrix matrix = new Matrix(Arrays.asList(
-            Arrays.asList(8, 7, 9),
-            Arrays.asList(6, 7, 6),
-            Arrays.asList(3, 2, 5)
+        Matrix matrix = new Matrix(List.of(
+            List.of(8, 7, 9),
+            List.of(6, 7, 6),
+            List.of(3, 2, 5)
         ));
 
         Set<MatrixCoordinate> expectedSaddlePoints = Collections.singleton(new MatrixCoordinate(2, 2));
