@@ -1,23 +1,25 @@
 package com.harcyah.kata.exercism.scrabble_score;
 
+import lombok.AllArgsConstructor;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import static org.junit.Assert.assertEquals;
 
+@AllArgsConstructor
 @RunWith(Parameterized.class)
 public class ScrabbleScoreTest {
 
-    private String input;
-    private int expectedOutput;
+    private final String input;
+    private final int expectedOutput;
 
     @Parameterized.Parameters
     public static Collection<Object[]> data() {
-        return Arrays.asList(new Object[][]{
+        return List.of(new Object[][]{
                 {"", 0},
                 {" \t\n", 0},
                 {null, 0},
@@ -30,15 +32,11 @@ public class ScrabbleScoreTest {
         });
     }
 
-    public ScrabbleScoreTest(String input, int expectedOutput) {
-        this.input = input;
-        this.expectedOutput = expectedOutput;
-    }
-
     @Test
     public void test() {
         Scrabble scrabble = new Scrabble(input);
 
         assertEquals(expectedOutput, scrabble.getScore());
     }
+
 }
