@@ -2,7 +2,6 @@ package com.harcyah.kata.exercism.series;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.Assert.assertEquals;
@@ -14,7 +13,7 @@ public class SeriesTest {
     @Test
     public void hasDigitsShort() {
         Series sut = new Series("01234");
-        List<Integer> expected = Arrays.asList(0, 1, 2, 3, 4);
+        List<Integer> expected = List.of(0, 1, 2, 3, 4);
         List<Integer> actual = sut.getDigits();
         assertNotNull(actual);
         assertFalse(actual.isEmpty());
@@ -24,7 +23,7 @@ public class SeriesTest {
     @Test
     public void hasDigitsLong() {
         Series sut = new Series("0123456789");
-        List<Integer> expected = Arrays.asList(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
+        List<Integer> expected = List.of(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
         List<Integer> actual = sut.getDigits();
         assertNotNull(actual);
         assertFalse(actual.isEmpty());
@@ -34,7 +33,7 @@ public class SeriesTest {
     @Test
     public void keepsTheDigitOrderIfReversed() {
         Series sut = new Series("9876543210");
-        List<Integer> expected = Arrays.asList(9, 8, 7, 6, 5, 4, 3, 2, 1, 0);
+        List<Integer> expected = List.of(9, 8, 7, 6, 5, 4, 3, 2, 1, 0);
         List<Integer> actual = sut.getDigits();
         assertNotNull(actual);
         assertFalse(actual.isEmpty());
@@ -44,7 +43,7 @@ public class SeriesTest {
     @Test
     public void keepsArbitraryDigitOrder() {
         Series sut = new Series("936923468");
-        List<Integer> expected = Arrays.asList(9, 3, 6, 9, 2, 3, 4, 6, 8);
+        List<Integer> expected = List.of(9, 3, 6, 9, 2, 3, 4, 6, 8);
         List<Integer> actual = sut.getDigits();
         assertNotNull(actual);
         assertFalse(actual.isEmpty());
@@ -54,12 +53,12 @@ public class SeriesTest {
     @Test
     public void canSliceByOne() {
         Series sut = new Series("01234");
-        List<List<Integer>> expected = Arrays.asList(
-                Arrays.asList(0),
-                Arrays.asList(1),
-                Arrays.asList(2),
-                Arrays.asList(3),
-                Arrays.asList(4));
+        List<List<Integer>> expected = List.of(
+                List.of(0),
+                List.of(1),
+                List.of(2),
+                List.of(3),
+                List.of(4));
         List<List<Integer>> actual = sut.slices(1);
         assertNotNull(actual);
         assertFalse(actual.isEmpty());
@@ -69,14 +68,14 @@ public class SeriesTest {
     @Test
     public void canSliceByTwo() {
         Series sut = new Series("98273463");
-        List<List<Integer>> expected = Arrays.asList(
-                Arrays.asList(9, 8),
-                Arrays.asList(8, 2),
-                Arrays.asList(2, 7),
-                Arrays.asList(7, 3),
-                Arrays.asList(3, 4),
-                Arrays.asList(4, 6),
-                Arrays.asList(6, 3));
+        List<List<Integer>> expected = List.of(
+                List.of(9, 8),
+                List.of(8, 2),
+                List.of(2, 7),
+                List.of(7, 3),
+                List.of(3, 4),
+                List.of(4, 6),
+                List.of(6, 3));
         List<List<Integer>> actual = sut.slices(2);
         assertNotNull(actual);
         assertFalse(actual.isEmpty());
@@ -86,10 +85,10 @@ public class SeriesTest {
     @Test
     public void canSliceByThree() {
         Series sut = new Series("01234");
-        List<List<Integer>> expected = Arrays.asList(
-                Arrays.asList(0, 1, 2),
-                Arrays.asList(1, 2, 3),
-                Arrays.asList(2, 3, 4));
+        List<List<Integer>> expected = List.of(
+                List.of(0, 1, 2),
+                List.of(1, 2, 3),
+                List.of(2, 3, 4));
         List<List<Integer>> actual = sut.slices(3);
         assertNotNull(actual);
         assertFalse(actual.isEmpty());
@@ -99,10 +98,10 @@ public class SeriesTest {
     @Test
     public void canSliceByThreeWithDuplicateDigits() {
         Series sut = new Series("31001");
-        List<List<Integer>> expected = Arrays.asList(
-                Arrays.asList(3, 1, 0),
-                Arrays.asList(1, 0, 0),
-                Arrays.asList(0, 0, 1));
+        List<List<Integer>> expected = List.of(
+                List.of(3, 1, 0),
+                List.of(1, 0, 0),
+                List.of(0, 0, 1));
         List<List<Integer>> actual = sut.slices(3);
         assertNotNull(actual);
         assertFalse(actual.isEmpty());
@@ -112,9 +111,9 @@ public class SeriesTest {
     @Test
     public void canSliceByFour() {
         Series sut = new Series("91274");
-        List<List<Integer>> expected = Arrays.asList(
-                Arrays.asList(9, 1, 2, 7),
-                Arrays.asList(1, 2, 7, 4));
+        List<List<Integer>> expected = List.of(
+                List.of(9, 1, 2, 7),
+                List.of(1, 2, 7, 4));
         List<List<Integer>> actual = sut.slices(4);
         assertNotNull(actual);
         assertFalse(actual.isEmpty());
@@ -124,8 +123,8 @@ public class SeriesTest {
     @Test
     public void canSliceByFive() {
         Series sut = new Series("81228");
-        List<List<Integer>> expected = Arrays.asList(
-                Arrays.asList(8, 1, 2, 2, 8));
+        List<List<Integer>> expected = List.of(
+                List.of(8, 1, 2, 2, 8));
         List<List<Integer>> actual = sut.slices(5);
         assertNotNull(actual);
         assertFalse(actual.isEmpty());
@@ -136,4 +135,5 @@ public class SeriesTest {
     public void throwsAnErrorIfNotEnoughDigitsToSlice() {
         new Series("01032987583").slices(12);
     }
+
 }
