@@ -2,7 +2,6 @@ package com.harcyah.kata.exercism.sieve;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.Assert.assertEquals;
@@ -12,7 +11,7 @@ public class SieveTest {
     @Test
     public void findFirstPrime() {
         Sieve sieve = new Sieve(2);
-        List<Integer> expectedOutput = Arrays.asList(new Integer[]{2});
+        List<Integer> expectedOutput = List.of(new Integer[]{2});
 
         assertEquals(expectedOutput, sieve.getPrimes());
     }
@@ -20,7 +19,7 @@ public class SieveTest {
     @Test
     public void findPrimesUpTo10() {
         Sieve sieve = new Sieve(10);
-        List<Integer> expectedOutput = Arrays.asList(2, 3, 5, 7);
+        List<Integer> expectedOutput = List.of(2, 3, 5, 7);
 
         assertEquals(expectedOutput, sieve.getPrimes());
     }
@@ -28,7 +27,7 @@ public class SieveTest {
     @Test
     public void findPrimesUpTo1000() {
         Sieve sieve = new Sieve(1000);
-        List<Integer> expectedOutput = Arrays.asList(2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61,
+        List<Integer> expectedOutput = List.of(2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61,
                 67, 71, 73, 79, 83, 89, 97, 101, 103, 107, 109, 113, 127, 131, 137, 139, 149, 151, 157, 163, 167, 173,
                 179, 181, 191, 193, 197, 199, 211, 223, 227, 229, 233, 239, 241, 251, 257, 263, 269, 271, 277, 281, 283,
                 293, 307, 311, 313, 317, 331, 337, 347, 349, 353, 359, 367, 373, 379, 383, 389, 397, 401, 409, 419, 421,
@@ -40,4 +39,5 @@ public class SieveTest {
 
         assertEquals(expectedOutput, sieve.getPrimes());
     }
+
 }
